# ayon-syncsketch

./: .gitignore  README.md  create_package.py  mkdocs.yml  mkdocs_hooks.py  package.py  pyproject.toml  ruff.toml  versions.json
.github/workflows/: deploy_docker_images.yml  deploy_mkdocs.yml  release_trigger.yml
0.3.0/: 404.html  index.html  license.html
0.3.0/autoapi/: summary.html
0.3.0/search/: search_index.js
0.4.0/: 404.html  index.html  license.html  objects.inv
0.4.0/autoapi/: summary.html
0.4.0/search/: search_index.js  search_index.json
client/: pyproject.toml
client/ayon_syncsketch/: __init__.py  addon.py  syncsketch_module.py  version.py
docs/: index.md
server/: __init__.py  addon.py
server/settings/: __init__.py  main.py  publish_plugins.py
service/: .gitignore  Dockerfile  Makefile  docker-compose.yml  manage.ps1  pyproject.toml  sample_env
service/processor/: __init__.py  __main__.py  logic.py  processor.py  syncsketch_api.py
service/processor/event_handlers/: item_approval_status_changed.py  review_session_end.py
service/processor/lib/: __init__.py  event_abstraction.py
service/processor/processor_lib/: event_abstraction.py
service_tools/: Makefile  README.md  main.py  manage.ps1  pyproject.toml
services/: Makefile  manage.ps1  pyproject.toml
services/processor/: Dockerfile  Makefile  __main__.py  docker-compose.yml  helper.py  lib.py  manage.ps1  processor.py  pyproject.toml
services/processor/processor/: __init__.py  __main__.py  logic.py  processor.py  syncsketch_api.py
syncsketch_common/: config.py  constants.py  server_handler.py
test-build/: 404.html  index.html  license.html  objects.inv
test-build/autoapi/: summary.html
test-build/search/: search_index.js  (+1 more)
tests/: README.md  config_tests.py  lib.py
(+79 files in other folders)
