[tool.poetry]
name = "syncsketch-processor"
version = "0.0.1"
description = "SyncSketch Integration for Ayon"
authors = ["Oscar Domingo <oscar.domingo@ynput.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pydantic = "^1.10.2"
nxtools = "^1.6"
ayon-python-api = "^0.3"
ftrack-python-api = "2.5.0"
python-dotenv = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
