[tool.poetry]
name = "syncsketch-processor"
version = "0.0.1"
description = "SyncSketch Integration for Ayon"
authors = ["Oscar Domingo <oscar.domingo@ynput.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pydantic = "^1.10.2"
nxtools = "^1.6"
ayon-python-api = "^0.1"
# TODO: once server handler is distributed form common this is not needed
# TODO: perahaps more dependencies will be needed from common
syncsketch = "^1.0"
# TODO: Remove this dependency once ftrack addon maintains processes
ftrack-python-api = "^2.5"
python-dotenv = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
